@@ -1,15 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX gebabbel-0.3-gcc45.patch 423 RMD160 6c6d9b21610cc7b28a0a17374c2f377869dab361 SHA1 a04701795f8c1d2632155486f45f4969adcb7534 SHA256 0aeec5c3a23e215cfc63cd8945e4e1ffe0a2f770e03fbe0a9d54b6fdbfd1f091
-DIST Gebabbel-0.4-Src.tar.gz 9698769 RMD160 5f4de1678434e75d88ace0e38e0242ee2da2addb SHA1 7f79d118950e705c622a7074b500009961412bbf SHA256 dcf3543412525959eaad755673fa65412077735fec400e6e62b1bd2c94ec1adf
-EBUILD gebabbel-0.4.ebuild 882 RMD160 e0e5f760519fedfaffff927f283521557932fac1 SHA1 214fde3970431635b558bc1ec78d207f6d159618 SHA256 cd50676294f21044cf4d4ce86afa2dbd08a60f0625d0f839d92ed910e679ec63
-MISC ChangeLog 1330 RMD160 adc17df4b72b66d103021b8bd682e705b40e005f SHA1 5f9148f793a29e6c63186e0ed778ce409d160cf7 SHA256 43c8b36142671544c7028b433ef881e45cd544cf4f8501bf173f2d2e82e3b665
-MISC metadata.xml 237 RMD160 20944f06e761a57587043f3ec7ec969a5ab9bdcc SHA1 33b0366a9efeb0caad5712fb7e628147dff924be SHA256 29eb01e164be9510d6a51d6477c169df641127a2a2df064c9d99c90c067ac3d7
+AUX gebabbel-0.3-gcc45.patch 423 SHA256 0aeec5c3a23e215cfc63cd8945e4e1ffe0a2f770e03fbe0a9d54b6fdbfd1f091 SHA512 94f534499da4fc206889f0fcb3164f9c6747219e4cbbdfd8f48cdcce8de81c38a606951e967949cdb976f0622f1e33750359019a89f50e91fd3613462c5fa109 WHIRLPOOL 8b4f11fc9447ce4e80328df808f4e2a2596c291f5788b8603623ff78cc6586281a9a6fcbc82b4769957851d871cd7923ef5d48f3aa944224937a49149a3f729e
+DIST Gebabbel-0.4-Src.tar.gz 9698769 SHA256 dcf3543412525959eaad755673fa65412077735fec400e6e62b1bd2c94ec1adf SHA512 96750cf1d3e627b8071d1693c7b31a2fb056f533c6e9de09e4de3550d7a923388c6b8f9634695d19708fd509ec9da537a0b1d477554d7249204754b55dd684f2 WHIRLPOOL 9592f32467505ae4bdd7858750648aa6c798768b94d95fcc97439de5e297ec366d8098010a7085de6babd08d24880ab8c4d28844fcd9a908f89d0f83784b6d17
+EBUILD gebabbel-0.4.ebuild 882 SHA256 35cba12d6d8f1773448e7bcbb3588883267a0611a99b9d81376395469cffa898 SHA512 47a3ab608469f41f31a69766ae87f08666256385162bc3212078f86bcb557110bdc39374f4c708730f488975f2f144a0b70ad696fcfaa28e8c7e3e25617e7c61 WHIRLPOOL 3a965a570fd1b683c3903e24319c60f56b9438270cc79579e0e905edf6c33cc3b44bc55d1e1af5142c146a37ab69972f2ccfe223c0156151e48a593e4f603b6f
+MISC ChangeLog 1475 SHA256 600a415634364559e5bcce6a3a21df7975024fa540899b281563d2c51243268c SHA512 383910568bfb543ba1e237f06e00493b2f35ec69b7481a77b4f034cfa91c328d4a9d3eeeaf6b849bc77ed484d1f9aa1ae167106df472649efc05831eb8989cfd WHIRLPOOL d457c1e595a5437ffb34e72d6c83284e844dd6e730da834f5c8c14cb289a5f0e838990b27c8edaac0f84a25434a8e1a08a29072880092776edd616d6e4bc7e65
+MISC metadata.xml 232 SHA256 06d74b1fa39badfed0a9c02a114b9c8149b44d5500556310f35f419b4ff932be SHA512 6a986e85185683ae5f6e05f7f8b1aab4247f5a7d11f3bd0d0ed76768409ac521f5e6fce581271715413d5e9283f419185ad5946e8cfb04ffa8c3a514100a15bb WHIRLPOOL 17efb7d0b805df3c2b02ccf3a7232e279fa8df52b2eaf194346a527191c9e62cb353f0cfcb73f051e264575466ea44e477f43bf7ea8d3bfced40503dae84a012
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
+Comment: GPGTools - http://gpgtools.org
 
-iEYEARECAAYFAk36FKMACgkQHB6c3gNBRYdVQwCgxZe0CBrybmnpBb1/6GOtefzQ
-62wAoJWr9076O3nmXOH0SqqwA53qqKUv
-=X7P2
+iEYEAREIAAYFAlAZUg0ACgkQgAnW8HDreRZHkQCcCZFv8silvC1TZlNSV6R+x2wH
+N70AnRLTuXb/HeSNpFWdvU/hFBN1LgDX
+=RscX
 -----END PGP SIGNATURE-----
