@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>sci-geosciences</herd>
-  <maintainer>
-    <email>hanno@gentoo.org</email>
-  </maintainer>
+	<herd>sci-geosciences</herd>
+	<maintainer>
+		<email>hanno@gentoo.org</email>
+	</maintainer>
 </pkgmetadata>
