@@ -1,6 +1,10 @@
 # ChangeLog for sci-geosciences/gebabbel
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/gebabbel/ChangeLog,v 1.6 2011/06/16 14:35:41 scarabeus Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/gebabbel/ChangeLog,v 1.7 2012/08/01 15:57:59 jlec Exp $
+
+  01 Aug 2012; Justin Lecher <jlec@gentoo.org> gebabbel-0.4.ebuild,
+  metadata.xml:
+  Respect CFLAGS, #429356; use eclass functions, install CREDITS
 
 *gebabbel-0.4 (16 Jun 2011)
 
